Update html template

--- a/src/template.html
+++ b/src/template.html
@@ -13,7 +13,6 @@
     <div class="magic-curtain"></div>
 
     <header>
-      <!--background banner : weather state-->
       <nav>
         <i class="fas fa-bars nav-icon"></i>
 
@@ -44,7 +43,7 @@
       </div>
       <div class="dashboard-week">
         <!-- dynamic content -->
-        <h4 class="js-predict">Expect showers Monday morning</h4>
+        <h4 class="js-predict">5 day forecast</h4>
       </div>
 
     </main>
